--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,7 +30,7 @@ body {
 
 .card {
   display: flex;
-  width: 820px;
+  max-width: 820px;
   border-radius: 0.5rem;
   height: 330px;
   background-color: hsl(244, 38%, 16%);
@@ -67,7 +67,6 @@ body {
       font-size: 1.8rem;
       font-weight: 700;
       margin-top: 3rem;
-      padding-inline: 1rem 5rem;
 
       .box {
         text-transform: uppercase;
@@ -107,4 +106,47 @@ body {
 .attribution a {
   color: orange;
   font-weight: bold;
+}
+
+@media screen and (max-width: 850px) {
+  .card {
+    flex-direction: column-reverse;
+    max-width: 300px;
+    height: 630px;
+
+    .textArea {
+      align-items: center;
+      padding: 2rem 4rem;
+
+      .title {
+        text-align: center;
+        padding-left: 0;
+      }
+
+      .description {
+        text-align: center;
+        padding-inline: 0;
+      }
+    }
+
+    .boxses {
+      flex-direction: column;
+      align-items: center;
+
+      .box {
+        text-align: center;
+        margin: 1rem 0;
+      }
+    }
+
+    .cardImgDiv {
+      background-image: url("../images/image-header-mobile.jpg");
+      border-radius: 0.5rem;
+    }
+  }
+
+  .attribution {
+    display: flex;
+    flex-direction: column;
+  }
 }
